# DistributedSemanticMaps

./: .gitignore  README.txt
PythonScripts/: balanced_accuracy.py  ensemble_accuracy.py  plot_data.py  plot_hist.py  plot_multiple_data.py  plot_vscbpp_cost.py  vscbpp.py  vscbpp_cluster.py  vscbpp_testing.py
argos-application/: CMakeLists.txt  leaks.txt
argos-application/controllers/: CMakeLists.txt
argos-application/controllers/collective_perception_controller/: CMakeLists.txt  collective_perception_controller.cpp  collective_perception_controller.h
argos-application/experiments/: collective_perception.argos  collective_perception_easy_environment.argos  collective_perception_hard_environment.argos  collective_perception_mixed_environment cluster.argos  collective_perception_mixed_environment.argos  collective_perception_mixed_environment.argos.orig  collective_perception_mixed_environment_cluster.argos  collective_perception_scenenn.argos  collective_perception_test_environment.argos  point_cloud_detector_unit_test.argos
argos-application/loop_functions/: CMakeLists.txt  point_cloud_loop_functions.cpp  point_cloud_loop_functions.cpp.orig  point_cloud_loop_functions.h  point_cloud_qtuser_functions.cpp  point_cloud_qtuser_functions.h  scenenn_point_cloud_loop_functions.cpp  scenenn_point_cloud_loop_functions.h
argos-point-cloud/src/: CMakeLists.txt
argos-point-cloud/src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake  ARGoSPackaging.cmake
argos-point-cloud/src/plugins/: CMakeLists.txt
argos-point-cloud/src/plugins/robots/generic/: CMakeLists.txt
argos-point-cloud/src/plugins/robots/generic/control_interface/ci_camera_sensor_algorithms/: ci_camera_sensor_point_cloud_detector_algorithm.cpp  ci_camera_sensor_point_cloud_detector_algorithm.h
argos-point-cloud/src/plugins/robots/generic/simulator/camera_sensor_algorithms/: camera_sensor_point_cloud_detector_algorithm.cpp  camera_sensor_point_cloud_detector_algorithm.h
argos-point-cloud/src/plugins/simulator/: CMakeLists.txt
argos-point-cloud/src/plugins/simulator/entities/: point_cloud_entity.cpp  point_cloud_entity.h
argos-point-cloud/src/plugins/simulator/media/: point_cloud_medium.cpp  point_cloud_medium.h
argos-point-cloud/src/plugins/simulator/physics_engines/dynamics2d/: dynamics2d_point_cloud_model.cpp  dynamics2d_point_cloud_model.h
argos-point-cloud/src/plugins/visualization/: CMakeLists.txt
argos-point-cloud/src/plugins/visualization/qt-opengl/: qtopengl_point_cloud.cpp  qtopengl_point_cloud.h
bash-scripts/: automate.sh  make_argospointcloud.sh  make_swarmmesh_bundle.sh  submit_experim.sh  submit_python_jobs.sh
config/: classes.yml
data/: 3DmFV.txt  BGA-PN++.txt  DGCNN.txt
data/005/: 005.xml
data/011/: 011.xml
data/confusion_matrix/: 3DmFV-Net.txt  BGA-DGCNN.txt  DGCNN.txt  PointCNN.txt  PointNet.txt
data/distributions/: BGA-DGCNN.txt  PointCNN.txt  PointNet++.txt  PointNet.txt  SpiderCNN.txt
